# mujoco-dex-bench

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: sysid.md  tasks.md
mujoco_dex_bench/: __init__.py
mujoco_dex_bench/baselines/: __init__.py  train_ppo.py  train_sac.py
mujoco_dex_bench/envs/: __init__.py  ball_roll.py  base_dex_env.py  card_flip.py  chopstick_grasp.py  door_open.py  in_hand_reorient.py  key_insert.py  peg_in_hole.py  pen_spin.py  scissors_cut.py  utils.py
mujoco_dex_bench/eval/: __init__.py  evaluate.py  plot_results.py
mujoco_dex_bench/mjcf/: ball_roll_scene.xml  card_flip_scene.xml  chopstick_grasp_scene.xml  dexterous_hand.xml  door_open_scene.xml  in_hand_reorient_scene.xml  key_insert_scene.xml  peg_in_hole_scene.xml  pen_spin_scene.xml  scissors_cut_scene.xml
mujoco_dex_bench/mjcf/assets/: README.md
mujoco_dex_bench/sysid/: __init__.py  fit_params.py
mujoco_dex_bench/wrappers/: __init__.py  domain_randomisation.py  observation_normaliser.py
tests/: test_envs.py  test_sysid.py  test_wrappers.py
