[metadata]
name = mujoco-dex-bench
version = 0.1.0

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    mujoco>=3.1.0
    gymnasium>=0.29.0
    gymnasium-robotics>=1.2.4
    dm-control>=1.0.14
    stable-baselines3>=2.3.0
    numpy>=1.26.0
    scipy>=1.12.0
    torch>=2.2.0
    matplotlib>=3.8.0
    pandas>=2.2.0
    tqdm>=4.66.0
    typer>=0.12.0
    rich>=13.7.0
    tensorboard>=2.14.0

[options.packages.find]
where = .
include = mujoco_dex_bench*

[options.package_data]
mujoco_dex_bench = mjcf/**/*.xml, mjcf/**/*.md
